Updated about and fixed well layout issues.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,14 @@
 	.container { 
 		padding:0;
 	}
+
+	a { 
+		font-weight:normal;
+
+		&:hover, &:active, &:focus { 
+			font-weight:normal;
+		}
+	}
 }
 
 a { 
@@ -64,6 +72,25 @@ button {
 	/*background-color: rgba(0,0,0,0.4);*/
 }
 
+@mixin tan-box {
+	background-color:$tan;
+	border-radius:5px;
+	padding:5px;
+}
+
+
+form.new_user { 
+	@include tan-box;
+}
+
+div#about {
+	@include tan-box;
+}
+
+div#contact {
+	@include tan-box;
+}
+
 div.well { 
 	background-color:$blue;
 	border:1px solid $blue;
@@ -96,6 +123,7 @@ div.well {
 
 	#lyrics { 
 		background-color:$tan;
+		font-size:1.2em;
 		border-radius:5px;
 		padding:10px;
 	}
@@ -114,7 +142,7 @@ div.well {
 			}
 
 			i { 
-				font-size:.75em;
+				/*font-size:.75em;*/
 			}
 
 			small { 
